AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gingacc-multidevice, 0.12.1)

AC_LANG_CPLUSPLUS
AC_PROG_CXX([g++])
AM_PROG_LIBTOOL

CXXFLAGS="-fPIC $CXXFLAGS"
CFLAGS="-fPIC $CFLAGS"

# Bring additional directories where things might be found into our
# search path. I don't know why autoconf doesn't do this by default
for spfx in /usr/lib/ /usr/local/lib/ /usr/local/lib/ginga/ /usr/local/lib/ginga/iocontents; do
if test -d ${spfx}; then
LDFLAGS="-L${spfx} $LDFLAGS"
fi
done

for spfx in /usr/include/ /usr/local/include/ /usr/local/include/ginga/; do
if test -d ${spfx}; then
CPPFLAGS="-I${spfx} $CPPFLAGS"
fi
done

###########
# HEADERS #
###########

############################
# Ginga CC Context Manager #
############################
AC_CHECK_HEADER([contextmanager/IContextManager.h], [], AC_MSG_ERROR([

Couldn't find Ginga CC Context Manager headers.
Please install Ginga CC Context Manager Hearders.

]))


##########################
# Ginga-CC System Thread #
##########################
AC_CHECK_HEADER([system/thread/Thread.h], [], AC_MSG_ERROR([

Couldn't find Ginga-CC System Thread headers.
Please install gingacc-system project.

]))

############################################
# Offering a non-componentized alternative #
############################################
components=yes
AC_ARG_ENABLE(components,
  [  --enable-components build project using components [[default=yes]]],
  enable_components="$enableval", enable_components=yes)

if test x$enable_components = xno; then
   COMPONENTS_LIBS='-lgingaccdataprocncl \
      -L/usr/local/lib/ginga/dp/ -L/usr/local/lib/ -L/usr/local/lib/ginga/'
   TEST_COMPONENTS_LIBS='-lgingaccmd -lgingaccdataprocncl \
      -lgingaccsystemthread -lgingacccontextmanager \
      -L/usr/local/lib/ginga/dp/ -L/usr/local/lib/ -L/usr/local/lib/ginga/'
   AC_DEFINE(HAVE_COMPSUPPORT, 0, [Def to 0 if you don't have Component support.])
   AC_MSG_WARN([*** Component support will not be built.])

else
   COMPONENTS_LIBS='-ldl -L/usr/local/lib/ -L/usr/local/lib/ginga/'
   TEST_COMPONENTS_LIBS='-ldl -L/usr/local/lib/ -L/usr/local/lib/ginga/'
   AC_DEFINE(HAVE_COMPSUPPORT, 1, [Def to 1 if you have Component support.])
   AC_MSG_RESULT([*** Component support will be built.])
fi

AM_CONDITIONAL(COMPONENTS, test "$enable_components" = "no")
AC_SUBST(COMPONENTS_LIBS)
AC_SUBST(TEST_COMPONENTS_LIBS)

###########################
# Multple Process Support #
###########################
multiprocess=yes
AC_ARG_ENABLE(multiprocess,
  [  --enable-multiprocess build project with multiple process support [[default=yes]]],
  enable_multiprocess="$enableval", enable_multiprocess=yes)

AC_CHECK_HEADER(
  [system/process/Process.h],
  [],
  AC_MSG_WARN([*** Process header not Found.])
    enable_multiprocess=no
)

if test x$enable_multiprocess = xno; then
   MULTIPROCESS_LIBS='-L/usr/local/lib/ginga/'
   AC_DEFINE(HAVE_MULTIPROCESS, 0, [Def to 0 if you don't have Multiple Process support.])
   AC_MSG_WARN([*** Multiple process support will not be built.])

else
   MULTIPROCESS_LIBS='-lrt -lgingaccsystemprocess -lpthread -L/usr/local/lib/ginga/'
   AC_DEFINE(HAVE_MULTIPROCESS, 1, [Def to 1 if you have Multiple Process support.])
   AC_MSG_RESULT([*** Multiple Process support will be built.])
fi

AM_CONDITIONAL(MULTIPROCESS, test "$enable_multiprocess" = "no")
AC_SUBST(MULTIPROCESS_LIBS)

AC_MSG_RESULT([
Build options: 
  Module directory        $MODULEDIR
  Multi Process Support   $enable_multiprocess
])

AC_OUTPUT(
    Makefile include/Makefile include/services/Makefile src/Makefile
    test/Makefile)


########
# LIBS #
########

############################
# Ginga CC Context Manager #
############################
AC_HAVE_LIBRARY(gingacccontextmanager, , AC_ERROR([

Couldn't find Ginga CC Context Manager library.
Please install Ginga CC Context Manager Library.

]))
